第6章Docker和 K8S/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: productmanage
  namespace: dev
spec:
  type: NodePort
  selector:
    app: productmanage
    release: stabel
  ports:
  - name: http
    port: 8090
    targetPort: 8091
    nodePort: 30080
