第6章Docker和 K8S/ingress.yaml
# cat ingress01.yaml 
apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
  name: simple-fanout-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 80
